k8s/refinery/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: refinery-app
  namespace: refinery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: refinery-app
  template:
    metadata:
      labels:
        app: refinery-app
        app.kubernetes.io/name: refinery-app
        app.kubernetes.io/component: app
        app.kubernetes.io/part-of: refinery
    spec:
      containers:
        - name: app
          image: ghcr.io/mikaelsiidorow/refinery/app:production
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 30
