k8s/refinery/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: refinery-app
  namespace: refinery
spec:
  selector:
    app: refinery-app
  ports:
    - port: 80
      targetPort: 3000
