k8s/refinery/zero-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: refinery-zero
  namespace: refinery
spec:
  selector:
    app: refinery-zero
  ports:
    - port: 4848
      targetPort: 4848
