k8s/refinery/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: refinery-app
  namespace: refinery
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - refinery.miksu.app
      secretName: refinery-app-tls
  rules:
    - host: refinery.miksu.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: refinery-app
                port:
                  number: 80
